cmake_minimum_required(VERSION 3.17)
project(test4)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
# aux_source_directory(. DIR_SRCS)
# add_subdirectory(func1 func2)
# add_executable(${PROJECT_NAME} ${DIR_SRCS} func3.c)
# target_link_libraries(test4 Func1 Func2)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/func1 SOURCE_FUNC1)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/func2 SOURCE_FUNC2)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR} SOURCE_FUNC3)
add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/main.c ${SOURCE_FUNC1} ${SOURCE_FUNC2} ${SOURCE_FUNC3})