cmake_minimum_required(VERSION 3.17)
project(test5)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
# aux_source_directory(. DIR_SRCS)
# add_subdirectory(comm src inc)
# add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/src/main.c)
# target_link_libraries(${PROJECT_NAME} Src Comm Inc)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/comm SOURCE_COMM)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/inc SOURCE_INC)
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/src SOURCE_SRC)
add_executable(${PROJECT_NAME} ${SOURCE_COMM} ${SOURCE_INC} ${SOURCE_SRC})